# ai-review-docx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_review_docx/: __init__.py  __main__.py  cli.py  comments.py  reviewer.py  utils.py
